# file-combiner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  file_combiner.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/demo/: test.py
tests/: test_file_combiner.py
